--- a/platforms/documentation/docs/src/docs/userguide/dep-man/advanced/variant_aware_resolution.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/advanced/variant_aware_resolution.adoc
@@ -82,7 +82,8 @@ In the example above, there are two *attributes* of importance for the *variants
 Note that the *metadata* of `org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1` showcases many more *attributes* to describe its *variants* such as `org.gradle.libraryelements` or `org.gradle.category`.
 However, Gradle may use any number of them during dependency resolution as some *attributes* are more relevant than others:
 
-```json
+[source,json]
+----
 "variants": [
 ...
   {
@@ -105,7 +106,7 @@ However, Gradle may use any number of them during dependency resolution as some 
   },
 ...
 ]
-```
+----
 
 There are two _types_ of *attributes* Gradle uses to match the available *variants* to the one required for the build:
 
@@ -372,13 +373,68 @@ Gradle would then select the highest compatible version—Java 11.
 **Secondary variants** are *additional sets of artifacts* that a variant can expose, which do **not** participate in graph resolution.
 Instead, they are considered *only during artifact selection*.
 
-These variants:
+A secondary variants:
 
-* Must be explicitly published (normally they are not published and not declared in metadata).
-* Are typically used to expose *precomputed transforms* of the main artifact like `.class` files extracted from a JAR, or the `resources` directory.
-* May be selected via an `ArtifactView` or `ArtifactResolutionQuery`, if the requested attributes match.
+* Is an additional artifact set exposed by a configuration.
+* It has its own attributes, artifacts, and optionally capabilities.
+* It must be explicitly published (secondary variants are not usually published or declared in metadata).
+* It may be selected via an `ArtifactView` or `ArtifactResolutionQuery`, if the requested attributes match.
+
+Secondary variants are typically used to expose *precomputed transforms* of the main artifact like `.class` files extracted from a JAR, or the `resources` directory.
 
 WARNING: Secondary variants are sometimes referred to in tooling or logs, but this term is being deprecated in favor of more precise concepts like *artifact sets* or *precomputed transforms*.
+
+The simplest scenario is a typical Java library
+
+====
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/kotlin", files="build.gradle.kts[tags=lib]"]
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/groovy", files="build.gradle[tags=lib]"]
+====
+
+The `apiElements` variant represents the public API of a library and is used during dependency resolution when a consuming project requests `java-api` usage:
+
+----
+> ./gradlew outgoingVariants -q
+
+include::{snippetsPath}/dependencyManagement/customizingResolution-secondaryVariants/tests/secondaryVariants.out[]
+----
+
+As shown in the output, in addition to its main artifact (`some-library-1.2.3.jar`), `apiElements` also exposes a **secondary variant** named `classes`, which provides the compiled class files as a `java-classes-directory`.
+
+This `classes` secondary variant does not influence which component is selected during graph resolution, but it gives Gradle more flexibility during artifact selection—for example, enabling consumers to use unjarred class files for faster access in IDEs or incremental compilation.
+
+Let's create a secondary variant of our Java library:
+
+====
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/kotlin", files="build.gradle.kts[tags=add]"]
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/groovy", files="build.gradle[tags=add]"]
+====
+
+And we can see our new secondary variant is created for `apiElements`:
+
+----
+> ./gradlew outgoingVariants -q
+
+include::{snippetsPath}/dependencyManagement/customizingResolution-secondaryVariants/tests/secondaryVariantsAdded.out[]
+----
+
+To create a completely new variant for our library, we must also create a new configuration.
+
+The code below defines a custom consumable configuration `fooFiles` with two **secondary variants**, `fooFilesVariant1` and `fooFilesVariant2`, each distinguished by a unique combination of custom attributes.
+The base configuration sets `FooAttribute = main`, which is inherited by `fooFilesVariant1`, while `fooFilesVariant2` overrides it to `secondary`.
+
+====
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/kotlin", files="build.gradle.kts[tags=custom]"]
+include::sample[dir="snippets/dependencyManagement/customizingResolution-secondaryVariants/groovy", files="build.gradle[tags=custom]"]
+====
+
+The output reflects this structure, showing `fooFiles` as the primary variant and both secondary variants with their corresponding `FooAttribute` and `FooVariantAttribute` values, which Gradle uses during **artifact selection** to match a consumer's requested attributes:
+
+----
+> ./gradlew outgoingVariants -q
+
+include::{snippetsPath}/dependencyManagement/customizingResolution-secondaryVariants/tests/secondaryVariantsNew.out[]
+----
 
 [[sec:variant-visual]]
 == Visualizing Variant Information
