--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -41,4 +41,31 @@ The previous step will help you identify potential problems by issuing deprecati
 
 === Deprecations
 
+[[deprecate-visible-property]]
+==== The `Configuration.visible` property is now deprecated
+Prior to Gradle 9.0, the artifacts of any configuration where `isVisible()` returned true would be built whenever the `assemble` task was executed.
+This implicit behavior was removed in 9.0, and the `Configuration.visible` property no longer has any meaningful effect.
+This property is now deprecated and will be removed in Gradle 10.0.0.
+Any usage of this property can be removed.
+If the artifacts of the configuration should be built by the `assemble` task, create an explicit task dependency on the `assemble` task instead.
+
+.build.gradle.kts
+[source,kotlin]
+----
+val specialJar = tasks.register<Jar>("specialJar") {
+    archiveBaseName.set("special")
+    from("build/special")
+}
+
+configurations {
+    consumable("special") {
+        outgoing.artifact(specialJar)
+    }
+}
+
+tasks.named("assemble") {
+    dependsOn(specialJar)
+}
+----
+
 === Potential breaking changes
