--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -217,10 +217,11 @@ As of Gradle 9, these configurations are no longer created or used by the Scala 
 
 === Settings file changes
 
-==== Project directories must exist
+==== Project directories must exist and be writeable
 
-Gradle will now fail if you include a project that does not correspond to a directory
-in the file system, or if the directory exists but is read-only.
+Gradle will fail if a project is included that does not correspond to an existing directory on the file system, or if the directory exists but is read-only.
+
+For example, you may see an error like:
 
 [source,text]
 ----
@@ -232,7 +233,7 @@ Configuring project ':subproject1' without an existing directory is not allowed.
 > Make sure the project directory exists and is writable.
 ----
 
-See more in <<deprecated_missing_project_directory>>.
+See <<deprecated_missing_project_directory>> for more details.
 
 === Task changes
 
