--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
@@ -501,20 +501,29 @@ This usage assumes that `featureA` is located at the root of your build.
 You can also include projects located in deeper subdirectories by specifying the complete path to the project using the `:` charactor as a path separator.
 For instance, if project `search` was located in a subdirectory named `features`, itself located in a subdirectory named `subs`, you could call `include(":subs:features:search")` to include it.
 
-Nesting projects under a sensible hierarchical directory structure is a common practice in Gradle builds.
-This allows you to organize large builds containing many projects to improve comprehensibility, versus having all your projects live at the root of the build.
+Nesting projects under a sensible hierarchical directory structure is a common practice in larger Gradle builds including more than a dozen or so projects.
+Such a layout allows you to organize large builds and improve comprehensibility, versus having all your projects live at the root of the build.
 
-However, without further configuration, Gradle will create empty projects for every element of the path.
+However, without further configuration, Gradle will create empty projects for every element of a hierarchical path.
 In the example above, Gradle will create a project named `:subs`, a project named `:subs:features`, and a project named `:subs:features:search`.
 This probably isn't intended, as you likely only want to add a `search` project.
 
-Additional projects - even if empty - will clutter reporting, and make your build harder to understand.
-If plugins are applied using `allprojects { ... }` or `subprojects { ... }`, they will apply to each of these empty projects, which can have performance impacts and will further hurt comprehensibility.
+Unused projects - even if empty - can surprise maintainers, clutter reporting, and make your build harder to understand.
+If plugins are applied using `allprojects { ... }` or `subprojects { ... }`, they will apply to each of these empty projects, which can also have performance impacts.
+It can also be awkward to invoke tasks on nested projects, as you will have to use the full path to the project, like `gradle :subs:features:search:build`, instead of the shorter `gradle :search:build`.
 
-To avoid this, be sure to explicitly set the link:{kotlinDslPath}/gradle/org.gradle.api/-project/get-project-dir.html[Project.projectDir] property of any projects included in nested directories: `project(':my-web-module').projectDir = file("subs/web/my-web-module"`).
+To avoid these negatives when using a hierarchical project structure, you can provide a non-hierarchical name when including the project and be sure to explicitly set the link:{kotlinDslPath}/gradle/org.gradle.api/-project/get-project-dir.html[Project.projectDir] property of any projects included in nested directories:
+```
+include(':my-web-module')
+project(':my-web-module').projectDir = file("subs/web/my-web-module")
+```
 This will prevent Gradle from creating empty projects for each element of the path.
 
-NOTE: Always keep your _logical_ project paths and _physical_ project locations aligned to avoid confusion.  Don't include a project named `:subs:features:search` and locate it at `features/ui/search`, as this will lead to confusion about the location of the project.  For the same reason, avoid unnecessarily deep directory structures - for builds containing only a few projects, it is better to keep the structure flat by locating all projects at the root of the build and avoid the need to explicitly set `projectDir` at all.
+NOTE: Always use an identical _logical_ project **name** and _physical_ project **location** to avoid confusion.  Don't include a project named `:search` and locate it at `features/ui/default-search-toolbar`, as this will lead to confusion about the location of the project.  Instead, locate this project at `features/ui/search`.
+
+Avoid unnecessarily deep directory structures - for builds containing only a few projects, it is better to keep the structure flat by locating all projects at the root of the build and avoid the need to explicitly set `projectDir` at all.
+Within the context of a particular build, it should always be obvious from the pathless project name where that project is located.
+If you find yourself dealing with ambiguity about project locations, consider flattening your directory structure to simplify it and avoid this.
 
 === Example
 
