--- a/platforms/documentation/docs/src/docs/userguide/running-builds/build_environment.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/build_environment.adoc
@@ -333,7 +333,7 @@ Enables incubating configuration-on-demand, where Gradle will attempt to configu
 +
 _Default is `false`._
 
-`org.gradle.console=(auto,plain,plain-with-color,rich,verbose)`::
+`org.gradle.console=(auto,plain,colored,rich,verbose)`::
 Customize <<command_line_interface.adoc#sec:command_line_logging,console output>> coloring or verbosity.
 +
 _Default depends on how Gradle is invoked._
