--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
@@ -207,14 +207,16 @@ When using multiple repositories, use <<filtering_repository_content.adoc#reposi
 === Explanation
 
 If your build declares more than one repository, you should declare content filters on these repositories to ensure you search for and obtain dependencies from the correct place.
-The repository that contains the remaining artifacts should come at the end, so we only query it if we don’t find the included modules in the other repositories.
+Content filtering is necessary if you have a reason to restrict searching for a dependency to a particular repository, and can be a good idea even if acceptable artifacts exist in multiple locations.
+Repository will be searched for dependencies that pass their filters in the order they are declared.
+Often the last repository is declared without any filters in order to serve as a default repository that is queried for any dependencies that don't pass the filters present on the other repositories.
 You should also use the <<filtering_repository_content.adoc#sec:declaring-content-repositories,exclusiveContent>> feature to restrict a dependency to a certain repository regardless of declaration order.
 
 Content filtering has three main benefits:
 
-- **Performance** since you only query one repository for a given artifact
+- **Performance**, since you only query repositories for a given artifact that will actually contain it
 - **Security**, by avoiding asking potentially every repository for every dependency (even ones they shouldn't contain), and improving resiliency to supply chain attacks by specifying exactly where to obtain each artifact
-- **Reliability**, by avoiding searching repositories that contain invalid or incorrect metadata or artifacts for particular dependencies
+3. **Reliability**, by avoiding searching repositories that contain invalid or incorrect metadata or artifacts for particular dependencies.
 
 === Example
 
