--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
@@ -375,8 +375,8 @@ You should also use the <<filtering_repository_content.adoc#sec:declaring-conten
 
 Content filtering has three main benefits:
 
-- **Performance**, since you only query repositories for a given artifact that will actually contain it
-- **Security**, by avoiding asking potentially every repository for every dependency (even ones they shouldn't contain), and improving resiliency to supply chain attacks by specifying exactly where to obtain each artifact
+1. **Performance**, since you only query repositories for a given artifact that will actually contain it
+2. **Security**, by avoiding asking potentially every repository for every dependency (even ones they shouldn't contain), and improving resiliency to supply chain attacks by specifying exactly where to obtain each artifact
 3. **Reliability**, by avoiding searching repositories that contain invalid or incorrect metadata or artifacts for particular dependencies.
 
 === Example
