--- a/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
@@ -55,6 +55,10 @@ If you do so:
 - an artifact declared in a repository _can't_ be found in any other
 - exclusive repository content must be declared in extension (just like for <<#sec:declaring-repository-filter, repository-level content>>)
 
+[NOTE]
+====
+Using exclusive repository content filters is a <<best_practices_dependencies.adoc#use_content_filtering,Gradle Best Practice>>.
+
 ====
 include::sample[dir="snippets/dependencyManagement/declaringRepositories-filtering/kotlin",files="build.gradle.kts[tags=exclusive-repository-filter]"]
 include::sample[dir="snippets/dependencyManagement/declaringRepositories-filtering/groovy",files="build.gradle[tags=exclusive-repository-filter]"]
