--- a/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
@@ -38,8 +38,17 @@ Here you can find a brief explanation of all the tags used in the best practices
 [[tag:properties]]
 `#properties` :: Items that explain the proper way to use <<build_environment.adoc#sec:gradle_configuration_properties,Gradle properties>>, and the appropriate usage of using particular properties.
 
+[[tag:repositories]]
+`#repositories` :: Items that explain how to declare and use <<declaring_repositories.adoc#declaring_repositories,dependency repositories>>.
+
+[[tag:settings]]
+`#settings` :: Items that explain how to use the <<settings_file.adoc#settings_file,settings file>> to configure multi-project builds, including how to structure projects and include them in the build.
+
 [[tag:structuring-builds]]
 `#structuring-builds` :: Items that explain how to organize build logic across different files and directories, and how to use multiple projects within a build.
+
+[[tag:task-configuration-avoidance]]
+`#task-configuration-avoidance` :: Items that are related to Gradle's <<writing_tasks.adoc#sec:task_configuration_avoidance,task configuration avoidance>> APIs and how to use them effectively.
 
 [[tag:tasks]]
 `#tasks` :: Items that explain the proper way to <<writing_tasks.adoc#sec:sample_task,write tasks>> in Gradle, and common footguns involved in task authoring.
