--- a/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/declaring-repositories/filtering_repository_content.adoc
@@ -1,4 +1,4 @@
-// Copyright (C) 2024 Gradle, Inc.
+    // Copyright (C) 2024 Gradle, Inc.
 //
 // Licensed under the Creative Commons Attribution-Noncommercial-ShareAlike 4.0 International License.;
 // you may not use this file except in compliance with the License.
@@ -66,6 +66,8 @@ include::sample[dir="snippets/dependencyManagement/declaringRepositories-filteri
 
 It is possible to filter either by explicit _group_, _module_ or _version_, either strictly or using regular expressions.
 See link:{javadocPath}/org/gradle/api/artifacts/repositories/InclusiveRepositoryContentDescriptor.html[InclusiveRepositoryContentDescriptor] for details.
+
+When setting up exclusive content filters be sure to also consider what repository will contain the transitives dependencies your build will resolve.
 
 [NOTE]
 ====
